--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ django-environ==0.11.2 ; python_version >= "3.11" and python_version < "4"
 django==4.2.5 ; python_version >= "3.11" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
+
+dj-database-url==2.1.0
+psycopg2-binary==2.9.7
