--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.5"
 django-environ = "^0.11.2"
+psycopg2 = "^2.9.7"
+gunicorn = "^21.2.0"
 
 
 [build-system]
