--- a/deploy/docker-compose-ci.yml
+++ b/deploy/docker-compose-ci.yml
@@ -5,6 +5,7 @@ services:
     image: nginx:latest
     restart: always
     volumes:
+      - ./static:/static
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 1337:80
@@ -16,6 +17,8 @@ services:
     restart: always
     env_file:
       - .env
+    volumes:
+      - ./static:/static
     expose:
       - 8000
     container_name: foodplan
