--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,7 +13,8 @@ server {
     proxy_redirect off;
     }
     location /static/ {
-        alias /static/;
+        root /static/;
+        expires 30d;
     }
     location /django-media/ {
         alias /django-media/;
