--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,7 +13,7 @@ server {
     proxy_redirect off;
     }
     location /static/ {
-        root /static/;
+        root /;
         expires 30d;
     }
     location /django-media/ {
