--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,6 +26,7 @@ jobs:
       - name: render config
         run: |
           cd deploy
+          static
           cat docker-compose-ci.yml | envsubst > docker-compose.yml
           cat .env_ci | envsubst > .env
       - name: copy files to server
