--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,8 +13,7 @@ server {
     proxy_redirect off;
     }
     location /static/ {
-        root /;
-        expires 30d;
+        alias /;
     }
     location /django-media/ {
         alias /django-media/;
