--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,7 +13,7 @@ server {
     proxy_redirect off;
     }
     location /static/ {
-        alias /;
+        root /;
     }
     location /django-media/ {
         alias /django-media/;
