--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,6 +37,14 @@ jobs:
           source: "deploy/docker-compose.yml,deploy/.env,deploy/nginx.conf"
           target: "deploy"
           strip_components: 1
+      - name: copy static to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          source: "static"
+          target: "deploy"
       - name: deploy app
         uses: appleboy/ssh-action@master
         with:
