--- a/deploy/.env_ci
+++ b/deploy/.env_ci
@@ -1,3 +1,6 @@
 SECRET_KEY=$SECRET_KEY
 ALLOWED_HOSTS=$ALLOWED_HOSTS
 DATABASE_URL=$DATABASE_URL
+EMAIL_HOST_USER=$EMAIL_HOST_USER
+EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD
+DEFAULT_FROM_EMAIL=$DEFAULT_FROM_EMAIL
