--- a/deploy/.env_ci
+++ b/deploy/.env_ci
@@ -4,3 +4,4 @@ DATABASE_URL=$DATABASE_URL
 EMAIL_HOST_USER=$EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD
 DEFAULT_FROM_EMAIL=$DEFAULT_FROM_EMAIL
+CSRF_TRUSTED_ORIGINS=$CSRF_TRUSTED_ORIGINS
