--- a/deploy/docker-compose-ci.yml
+++ b/deploy/docker-compose-ci.yml
@@ -6,6 +6,7 @@ services:
     restart: always
     volumes:
       - ./static:/static
+      - ./media:/media
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 1337:80
@@ -19,6 +20,7 @@ services:
       - .env
     volumes:
       - ./static:/static
+      - ./media:/media
     expose:
       - 8000
     container_name: foodplan
