--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -15,7 +15,7 @@ server {
     location /static/ {
         root /;
     }
-    location /django-media/ {
-        alias /django-media/;
+    location /media/ {
+        alias /;
     }
 }
